<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="80dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/checkout"
            android:textColor="@color/Grey"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/circle_shipping"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label" />


        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="79dp"
            android:background="@color/grayCustom"
            app:layout_constraintBottom_toBottomOf="@+id/iv_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_one"
            app:layout_constraintVertical_bias="0.565" />

        <ImageView
            android:id="@+id/iv_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:src="@drawable/circle_payment"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/iv_one"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:src="@drawable/circle_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_two" />

        <View
            android:id="@+id/view2"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="232dp"
            android:background="@color/grayCustom"
            app:layout_constraintBottom_toBottomOf="@+id/iv_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_two"
            app:layout_constraintVertical_bias="0.478" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/shipping"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="@+id/iv_one"
            app:layout_constraintStart_toStartOf="@+id/iv_one"
            app:layout_constraintTop_toBottomOf="@+id/iv_one" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/payment"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/iv_two"
            app:layout_constraintStart_toStartOf="@+id/iv_two"
            app:layout_constraintTop_toBottomOf="@+id/iv_two" />

        <TextView
            android:id="@+id/cart_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cart_details"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/tv_Billing_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="$165"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/cart_label"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/review"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/iv_three"
            app:layout_constraintStart_toStartOf="@+id/iv_three"
            app:layout_constraintTop_toBottomOf="@+id/iv_three" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_label"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Email"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Billing_name" />


        <TextView
            android:id="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:hint="@string/phone_number"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Billing_email" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Billing_phone" />

        <RadioButton
            android:id="@+id/rb_billing_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/CashOnDelivery"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_Cash_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/GreyLite"
            android:padding="10dp"
            android:text="@string/CashDelivery"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_billing_delivery" />

        <RadioButton
            android:id="@+id/rb_billing_Visa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/CreditCard"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Cash_Title" />

        <ImageView
            android:id="@+id/iv_Visa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_visa"
            app:layout_constraintStart_toEndOf="@+id/rb_billing_Visa"
            app:layout_constraintTop_toBottomOf="@+id/tv_Cash_Title" />

        <ImageView
            android:id="@+id/iv_armex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_amex"
            app:layout_constraintStart_toEndOf="@+id/iv_Visa"
            app:layout_constraintTop_toBottomOf="@+id/tv_Cash_Title" />

        <ImageView
            android:id="@+id/iv_master"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_mastercard"
            app:layout_constraintStart_toEndOf="@+id/iv_armex"
            app:layout_constraintTop_toBottomOf="@+id/tv_Cash_Title" />

        <TextView
            android:id="@+id/tv_Visa_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/GreyLite"
            android:padding="10dp"
            android:text="@string/CardTest"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_master">

        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/layout_border"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Visa_title">


            <EditText
                android:id="@+id/ed_billing_CardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext"
                android:hint="@string/card_number"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/ed_billing_CVC"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_billing_CVC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="@string/ctv"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ed_billing_Expire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_billing_CardNumber" />

            <EditText
                android:id="@+id/ed_billing_Expire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="@string/yy_mm"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ed_billing_CVC"
                app:layout_constraintTop_toBottomOf="@+id/ed_billing_CardNumber" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_Billing_Complete"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:text="@string/Complete"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Constraint" />

        <TextView
            android:id="@+id/et_Billing_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <TextView
            android:id="@+id/et_Billing_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/et_Billing_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview3" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>